--- a/index.html
+++ b/index.html
@@ -8,25 +8,45 @@
     <script language="javascript" type="text/javascript" src="cryptozombies_abi.js"></script>
   </head>
   <body>
+    <div id="zombies"></div>
 
     <script>
       var cryptoZombies;
-      // 1. declare `userAccount` here
       var userAccount;
 
       function startApp() {
         var cryptoZombiesAddress = "YOUR_CONTRACT_ADDRESS";
         cryptoZombies = new web3js.eth.Contract(cryptoZombiesABI, cryptoZombiesAddress);
 
-        // 2. Create `setInterval` code here
         var accountInterval = setInterval(function() {
-  // Check if account has changed
-  if (web3.eth.accounts[0] !== userAccount) {
-    userAccount = web3.eth.accounts[0];
-    // Call some function to update the UI with the new account
-    getZombiesByOwner(userAccount).then(displayZombies);
-  }
-}, 100);
+          // Check if account has changed
+          if (web3.eth.accounts[0] !== userAccount) {
+            userAccount = web3.eth.accounts[0];
+            // Call a function to update the UI with the new account
+            getZombiesByOwner(userAccount)
+            .then(displayZombies);
+          }
+        }, 100);
+      }
+
+      function displayZombies(ids) {
+        // Start here
+        $("#zombies").empty();
+        for (id of ids) {
+          getZombieDetails(id)
+.then(function(zombie) {
+  $("#zombies").append(`<div class="zombie">
+    <ul>
+      <li>Name: ${zombie.name}</li>
+      <li>DNA: ${zombie.dna}</li>
+      <li>Level: ${zombie.level}</li>
+      <li>Wins: ${zombie.winCount}</li>
+      <li>Losses: ${zombie.lossCount}</li>
+      <li>Ready Time: ${zombie.readyTime}</li>
+    </ul>
+  </div>`);
+});
+        }
       }
 
       function getZombieDetails(id) {
