--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script language="javascript" type="text/javascript" src="cryptozombies_abi.js"></script>
   </head>
   <body>
+    <div id="txStatus"></div>
     <div id="zombies"></div>
 
     <script>
@@ -30,24 +31,63 @@
       }
 
       function displayZombies(ids) {
-        // Start here
         $("#zombies").empty();
         for (id of ids) {
+          // Look up zombie details from our contract. Returns a `zombie` object
           getZombieDetails(id)
-.then(function(zombie) {
-  $("#zombies").append(`<div class="zombie">
-    <ul>
-      <li>Name: ${zombie.name}</li>
-      <li>DNA: ${zombie.dna}</li>
-      <li>Level: ${zombie.level}</li>
-      <li>Wins: ${zombie.winCount}</li>
-      <li>Losses: ${zombie.lossCount}</li>
-      <li>Ready Time: ${zombie.readyTime}</li>
-    </ul>
-  </div>`);
-});
+          .then(function(zombie) {
+            // Using ES6's "template literals" to inject variables into the HTML.
+            // Append each one to our #zombies div
+            $("#zombies").append(`<div class="zombie">
+              <ul>
+                <li>Name: ${zombie.name}</li>
+                <li>DNA: ${zombie.dna}</li>
+                <li>Level: ${zombie.level}</li>
+                <li>Wins: ${zombie.winCount}</li>
+                <li>Losses: ${zombie.lossCount}</li>
+                <li>Ready Time: ${zombie.readyTime}</li>
+              </ul>
+            </div>`);
+          });
         }
       }
+
+      // Start here
+function createRandomZombie(name) {
+  // This is going to take a while, so update the UI to let the user know
+  // the transaction has been sent
+  $("#txStatus").text("Creating new zombie on the blockchain. This may take a while...");
+  // Send the tx to our contract:
+  return CryptoZombies.methods.createRandomZombie(name)
+  .send({ from: userAccount })
+  .on("receipt", function(receipt) {
+    $("#txStatus").text("Successfully created " + name + "!");
+    // Transaction was accepted into the blockchain, let's redraw the UI
+    getZombiesByOwner(userAccount).then(displayZombies);
+  })
+  .on("error", function(error) {
+    // Do something to alert the user their transaction has failed
+    $("#txStatus").text(error);
+  });
+}
+
+function feedOnKitty(zombieId, kittyId) {
+  // This is going to take a while, so update the UI to let the user know
+  // the transaction has been sent
+  $("#txStatus").text("Eating a kitty. This may take a while...");
+  // Send the tx to our contract:
+  return CryptoZombies.methods.feedOnKitty(zombieId, kittyId)
+  .send({ from: userAccount })
+  .on("receipt", function(receipt) {
+    $("#txStatus").text("Ate a kitty and spawned a new Zombie!");
+    // Transaction was accepted into the blockchain, let's redraw the UI
+    getZombiesByOwner(userAccount).then(displayZombies);
+  })
+  .on("error", function(error) {
+    // Do something to alert the user their transaction has failed
+    $("#txStatus").text(error);
+  });
+}
 
       function getZombieDetails(id) {
         return cryptoZombies.methods.zombies(id).call()
