--- a/index.html
+++ b/index.html
@@ -52,42 +52,49 @@
         }
       }
 
-      // Start here
-function createRandomZombie(name) {
-  // This is going to take a while, so update the UI to let the user know
-  // the transaction has been sent
-  $("#txStatus").text("Creating new zombie on the blockchain. This may take a while...");
-  // Send the tx to our contract:
-  return CryptoZombies.methods.createRandomZombie(name)
-  .send({ from: userAccount })
-  .on("receipt", function(receipt) {
-    $("#txStatus").text("Successfully created " + name + "!");
-    // Transaction was accepted into the blockchain, let's redraw the UI
-    getZombiesByOwner(userAccount).then(displayZombies);
-  })
-  .on("error", function(error) {
-    // Do something to alert the user their transaction has failed
-    $("#txStatus").text(error);
-  });
-}
+      function createRandomZombie(name) {
+        // This is going to take a while, so update the UI to let the user know
+        // the transaction has been sent
+        $("#txStatus").text("Creating new zombie on the blockchain. This may take a while...");
+        // Send the tx to our contract:
+        return CryptoZombies.methods.createRandomZombie(name)
+        .send({ from: userAccount })
+        .on("receipt", function(receipt) {
+          $("#txStatus").text("Successfully created " + name + "!");
+          // Transaction was accepted into the blockchain, let's redraw the UI
+          getZombiesByOwner(userAccount).then(displayZombies);
+        })
+        .on("error", function(error) {
+          // Do something to alert the user their transaction has failed
+          $("#txStatus").text(error);
+        });
+      }
 
-function feedOnKitty(zombieId, kittyId) {
-  // This is going to take a while, so update the UI to let the user know
-  // the transaction has been sent
-  $("#txStatus").text("Eating a kitty. This may take a while...");
-  // Send the tx to our contract:
-  return CryptoZombies.methods.feedOnKitty(zombieId, kittyId)
-  .send({ from: userAccount })
-  .on("receipt", function(receipt) {
-    $("#txStatus").text("Ate a kitty and spawned a new Zombie!");
-    // Transaction was accepted into the blockchain, let's redraw the UI
-    getZombiesByOwner(userAccount).then(displayZombies);
-  })
-  .on("error", function(error) {
-    // Do something to alert the user their transaction has failed
-    $("#txStatus").text(error);
-  });
-}
+      function feedOnKitty(zombieId, kittyId) {
+        $("#txStatus").text("Eating a kitty. This may take a while...");
+        return CryptoZombies.methods.feedOnKitty(zombieId, kittyId)
+        .send({ from: userAccount })
+        .on("receipt", function(receipt) {
+          $("#txStatus").text("Ate a kitty and spawned a new Zombie!");
+          getZombiesByOwner(userAccount).then(displayZombies);
+        })
+        .on("error", function(error) {
+          $("#txStatus").text(error);
+        });
+      }
+
+      // Start here
+      function levelUp(zombieId) {
+        $("#txStatus").text("Leveling up your zombie...");
+        return CryptoZombies.methods.levelUp(zombieId)
+        .send({ from: userAccount, value: web3js.utils.toWei("0.001", "ether") })
+        .on("receipt", function(receipt) {
+          $("#txStatus").text("Power overwhelming! Zombie successfully leveled up");
+        })
+        .on("error", function(error) {
+          $("#txStatus").text(error);
+        });
+      }
 
       function getZombieDetails(id) {
         return cryptoZombies.methods.zombies(id).call()
