--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
             .then(displayZombies);
           }
         }, 100);
+
+        // Start here
+        var web3Infura = new Web3(new Web3.providers.WebsocketProvider("wss://mainnet.infura.io/ws"));
+        var czEvents = new web3Infura.eth.Contract(cryptoZombiesABI, cryptoZombiesAddress);
+        czEvents.events.Transfer({ filter: { _to: userAccount } })
+          .on("data", function(event) {
+            let data = event.returnValues;
+            getZombiesByOwner(userAccount).then(displayZombies);
+          }).on("error", console.error);
+
       }
 
       function displayZombies(ids) {
@@ -83,11 +93,10 @@
         });
       }
 
-      // Start here
       function levelUp(zombieId) {
         $("#txStatus").text("Leveling up your zombie...");
         return CryptoZombies.methods.levelUp(zombieId)
-        .send({ from: userAccount, value: web3js.utils.toWei("0.001", "ether") })
+        .send({ from: userAccount, value: web3.utils.toWei("0.001", "ether") })
         .on("receipt", function(receipt) {
           $("#txStatus").text("Power overwhelming! Zombie successfully leveled up");
         })
